--- a/src/components/Title/style.css
+++ b/src/components/Title/style.css
@@ -67,3 +67,12 @@ height: 100%;
     height: 20%;
   }
 }
+
+@media (max-width: 600px) {
+  .scores {
+    font-size: 1rem;
+  }
+  .title-area div {
+    padding: 0;
+    }
+}
