Audio on/off switch for background music is working

--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,9 @@ body {
   display: flex;
   flex-flow: row wrap;
 }
+
+@media (max-width: 600px) {
+  body {
+    background-image: url("/resources/images/botw_background_narrow.jpg");
+   }
+}
