--- a/src/components/Title/style.css
+++ b/src/components/Title/style.css
@@ -3,20 +3,20 @@
   text-align: center;
   font-size: 4.5rem;
   text-decoration: underline;
-  color:rgb(0, 66, 0);
+  color: rgb(0, 66, 0);
   margin-bottom: 50px;
   font-family: botwFont;
 }
 
 .title-area {
-height: 25%;
+  height: 25%;
 }
 
 .title-area div {
-height: 100%;
+  height: 100%;
 }
 
-.title-area > div img {
+.title-area>div img {
   max-height: 100%;
   max-width: 100%;
   object-fit: contain;
@@ -32,6 +32,15 @@ height: 100%;
   font-size: 3rem;
   color: gold;
   background-color: rgba(0, 100, 0, .6);
+  border-radius: 30px;
+}
+
+.sound-btn {
+  position: absolute;
+  top: 10%;
+  right: 10%;
+  width: 15%;
+
 }
 
 @font-face {
@@ -60,6 +69,9 @@ height: 100%;
   .scores {
     font-size: 1.5rem;
   }
+  .sound-btn {
+    width: 20%;
+  }
 }
 
 @media (max-width: 665px) {
@@ -74,5 +86,8 @@ height: 100%;
   }
   .title-area div {
     padding: 0;
-    }
+  }
+  .sound-btn {
+    width: 30%;
+  }
 }
