--- a/src/components/CharacterCard/style.css
+++ b/src/components/CharacterCard/style.css
@@ -5,8 +5,14 @@
   margin: 1rem;
   position: relative;
   width: 250px;
+  border-radius: 30px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
+}
+
+.card:hover {
+  background: rgba(0, 116, 15, 0.7);
+  box-shadow: 0 3px 6px rgb(90, 90, 90), 0 3px 6px rgb(90, 90, 90);
 }
 
 .card > .img-container {
